set(ITK3P_INSTALL_EXPORT_NAME "${ITKMINC2-targets}")
set(ITK3P_INSTALL_INCLUDE_DIR "${ITKMINC2_INSTALL_INCLUDE_DIR}")
set(ITK3P_INSTALL_RUNTIME_DIR "${ITKMINC2_INSTALL_RUNTIME_DIR}")
set(ITK3P_INSTALL_LIBRARY_DIR "${ITKMINC2_INSTALL_LIBRARY_DIR}")
set(ITK3P_INSTALL_ARCHIVE_DIR "${ITKMINC2_INSTALL_ARCHIVE_DIR}")

set(LIBMINC_EXTERNALLY_CONFIGURED ON)
set(LIBMINC_INSTALL_NO_DEVELOPMENT ${ITK_INSTALL_NO_DEVELOPMENT})
set(LIBMINC_EXTERNAL_LIB_PREFIX "itk")
set(LIBMINC_EXPORTED_TARGETS ${ITKMINC2-targets})
set(LIBMINC_INSTALL_LIBRARY_DIR ${ITKMINC2_INSTALL_LIBRARY_DIR})
set(LIBMINC_INSTALL_ARCHIVE_DIR ${ITKMINC2_INSTALL_ARCHIVE_DIR})
set(LIBMINC_INSTALL_RUNTIME_DIR ${ITKMINC2_INSTALL_RUNTIME_DIR})
set(LIBMINC_INSTALL_INCLUDE_DIR ${ITKMINC2_INSTALL_INCLUDE_DIR}/itkminc2)

add_subdirectory(itkminc2)
itk_module_target(itkminc2 NO_INSTALL)
